# hnu_query

./: .env  .gitignore  .releaserc.json  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
docs/: cache.md  fields.md  structure.md  test.md
docs/hdjw/: building.md  time.md
docs/yjsxt/: token.md
examples/: demo.rs
scripts/: bump_cargo_version.py  verify_tag_matches_cargo.py
src/: error.rs  lib.rs  test.rs
src/ca/: login.rs  mod.rs  test.rs
src/ca/grade_rank/: mod.rs  raw.rs
src/cas/: login.rs  mod.rs  utils.rs
src/gym/: error.rs  login.rs  mod.rs  raw.rs  test.rs
src/gym/appointment/: mod.rs  raw.rs
src/gym/grade/: mod.rs  raw.rs  utils.rs
src/hdjw/: error.rs  login.rs  mod.rs  raw.rs  test.rs
src/hdjw/class_table/: mod.rs  raw.rs
src/hdjw/empty_classroom/: mod.rs  raw.rs
src/hdjw/exam_schedule/: mod.rs  raw.rs
src/hdjw/grade/: mod.rs  raw.rs
src/hdjw/rank/: mod.rs  raw.rs
src/lab/: mod.rs
src/lab/course/: mod.rs  raw.rs
src/lab/grade/: mod.rs  raw.rs
src/lab/login/: captcha.rs  mod.rs  utils.rs
src/lab/schedule/: mod.rs  raw.rs
src/lab/semester/: mod.rs  raw.rs
src/lab/test/: captcha.rs  mod.rs
src/netflow/: login.rs  mod.rs  test.rs
src/netflow/detail/: mod.rs  raw.rs
src/netflow/order/: mod.rs  raw.rs
src/netflow/pay_info/: mod.rs  raw.rs
src/netflow/this_month/: mod.rs  raw.rs  utils.rs
src/netflow/user_info/: mod.rs  raw.rs
src/pt/: login.rs  mod.rs  test.rs
src/pt/card/: mod.rs  raw.rs
src/utils/: mod.rs  request.rs
src/wxpay/: mod.rs
src/xgxt/: login.rs  mod.rs  test.rs
src/yjsxt/: error.rs  login.rs  mod.rs  test.rs  utils.rs
(+10 files in other folders)
