[package]
name = "hnu_query"
version = "0.0.1"
edition = "2024"

[lib]
name = "hnu_query"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.41.1", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
    "multipart",
] } # 开启gzip可信电子凭证才能正常解析
aes = "0.8.4"
ecb = { version = "0.1.2", features = ["alloc", "std"] }
base64 = "0.22.1"
num-bigint = "0.4.6"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
chrono = { version = "0.4.38", features = ["serde"] }
pdf-extract = "0.8.0"

[build-dependencies]
dotenvy = "0.15.7"
